--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "razonyang/php-routing",
+  "name": "a/php-routing",
   "type": "library",
   "description": "a fast and flexible HTTP Router",
   "keywords": [
