--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     "routing",
     "RESTful API"
   ],
-  "homepage": "https://github.com/razonyang/php-routing",
+  "homepage": "https://github.com/zhangxingye/aaa",
   "license": "BSD-3-Clause",
   "support": {
-    "issues": "https://github.com/razonyang/php-routing/issues"
+    "issues": "https://github.com/zhangxingye/aaa/issues"
   },
   "authors": [
     {
