--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
   },
   "authors": [
     {
-      "name": "Razon Yang",
-      "email": "razonyang@gmail.com"
+      "name": "aa Yang",
+      "email": "aa@gmail.com"
     }
   ],
   "require": {
