--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "zhangxingye/aaa",
+  "name": "zhangxingye/aa",
   "type": "library",
   "description": "a fast and flexible HTTP Router",
   "keywords": [
