--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   ],
   "require": {
   },
-"minimum-stability":"dev"
+"minimum-stability":"dev",
   "autoload": {
     "psr-4": {
       "RazonYang\\Routing\\": "src"
